CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

set(CMAKE_CXX_FLAGS "-std=c++11 -O3")

PROJECT(GN-BA)

find_package(Sophus REQUIRED)

INCLUDE_DIRECTORIES(${Sophus_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("/usr/include/eigen3")

SET(Sophus_LIBRARIES libSophus.so)

ADD_EXECUTABLE(GN-BA GN-BA.cpp)

TARGET_LINK_LIBRARIES(GN-BA ${Sophus_LIBRARIES}) 
