CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

set(CMAKE_CXX_FLAGS "-std=c++11 -O3")

PROJECT(optical_flow)

find_package(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("usr/include/eigen3")

ADD_EXECUTABLE(${PROJECT_NAME} optical_flow.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})
